--- a/app/public/create.html
+++ b/app/public/create.html
@@ -24,6 +24,10 @@
 		<td><label name="password" for="password">Password:</label></td>
 		<td><input type="password" id="password"></td>
 	</tr>
+	<tr>
+		<td><label name="confirm-password" for="confirm-password">Confirm Password:</label></td>
+		<td><input type="password" id="confirm-password"></td>
+	</tr>
 </table>
 
 <button id="create">Create account</button>
@@ -35,27 +39,35 @@
 <script>
 let usernameInput = document.getElementById("username");
 let passwordInput = document.getElementById("password");
+let confirm_password = document.getElementById("confirm-password");
 let result = document.getElementById("result");
 
 document.getElementById("create").addEventListener("click", () => {
-	fetch("/signup", {
-		method: "POST",
-		headers: {
-			"Content-Type": "application/json"
-		},
-		body: JSON.stringify({
-			username: usernameInput.value,
-			plaintextPassword: passwordInput.value,
-		})
-	}).then((response) => {
-		if (response.status === 200) {
-			result.textContent = "Account was created";
-			result.classList.remove("error");
-		} else {
-			result.textContent = "Account creation failed";
-			result.classList.add("error");
-		}
-	});
+	if (passwordInput.value !== confirm_password.value) {
+		result.textContent = "Passwords do not match."
+		result.classList.add("error");
+	} else {
+		fetch("/signup", {
+			method: "POST",
+			headers: {
+				"Content-Type": "application/json"
+			},
+			body: JSON.stringify({
+				username: usernameInput.value,
+				plaintextPassword: passwordInput.value,
+			})
+		}).then((response) => {
+			if (response.status === 200) {
+				result.textContent = "Account was created";
+				result.classList.remove("error");
+			} else {
+				response.text().then((text) => {
+					result.textContent = text;
+				})
+				result.classList.add("error");
+			}
+		});
+	}
 });
 </script>
 
