--- a/app/public/create.html
+++ b/app/public/create.html
@@ -38,7 +38,7 @@
 
 <div id="result">&nbsp;</div>
 
-<p>Already have an account? Log in <a href="login.html">here</a>.</p>
+<p>Already have an account? Log in <a href="/user/login">here</a>.</p>
 
 <script>
 let usernameInput = document.getElementById("username");
