--- a/app/public/index_test.html
+++ b/app/public/index_test.html
@@ -5,10 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .error {
+            color: red;
+        }
+        th {
+            padding: 15px;
+            margin: 20px;
+            border-style: solid;
+        }
+        td {
+            padding: 10px;
+            border-style: solid;
+        }
+    </style>
 </head>
 <body>
     <h1>Welcome User</h1>
     <li><a href="/user/logout">logout</a></li>
-    
+
+    <table>
+        <thead>
+            <tr><th>Stock</th><th>Quantity</th><th>Total Value</th><th>Weekly Change</th></tr>
+        </thead>
+        <tbody id="portfolio"></tbody>
+    </table>
+    <div id="message"></div>
+<script>
+
+let buyButton = document.getElementById("buy");
+let sellButton = document.getElementById("sell");
+let container = document.getElementById("portfolio");
+
+let url = `/portfolio`
+fetch(url).then((response) => {
+    if (response.status === 200) {
+        response.json().then(body => {
+            console.log(body.rows);
+            for (let i=0; i<body.rows.length; i++) {
+                row = document.createElement('tr');
+                container.append(row);
+                stock = document.createElement('td');
+                stock.textContent = body.rows[i].symbol;
+                row.append(stock);
+                quantity = document.createElement('td');
+                quantity.textContent = body.rows[i].quantity;
+                row.append(quantity);
+                daily = document.createElement('td');
+                daily.textContent = body.rows[i].total;
+                row.append(daily);
+                weekly = document.createElement('td');
+                weekly.textContent = "%xx";
+                row.append(weekly);
+                buyBtn = document.createElement("button");
+                buyBtn.textContent = "Buy";
+                row.append(buyBtn);
+                sellBtn = document.createElement("button");
+                sellBtn.textContent = "Sell";
+                row.append(sellBtn);
+            }
+        }).catch(error =>  {
+            message.textContent = "Something went wrong";
+        });            
+    } else {
+        message.textContent = "not status 200";   
+    }
+}).catch(error =>  {
+        message.textContent = "Something went wrong";
+})
+
+</script>
+
 </body>
 </html>
