--- a/app/public/index_test.html
+++ b/app/public/index_test.html
@@ -26,7 +26,7 @@
 
     <table>
         <thead>
-            <tr><th>Stock</th><th>Quantity</th><th>Total Value</th><th>Weekly Change</th></tr>
+            <tr><th>Company Name</th><th>Stock</th><th>Quantity</th><th>Total Value</th><th>Weekly Change</th></tr>
         </thead>
         <tbody id="portfolio"></tbody>
     </table>
@@ -39,6 +39,7 @@ let dollarUS = Intl.NumberFormat("en-US", {
 });
 
 let container = document.getElementById("portfolio");
+//let tickerList = [];
 
 let url = `/portfolio`
 fetch(url).then((response) => {
@@ -46,8 +47,12 @@ fetch(url).then((response) => {
         response.json().then(body => {
             console.log(body.rows);
             for (let i=0; i<body.rows.length; i++) {
+                //tickerList.push(body.rows[i].symbol);
+                //console.log(tickerList);
                 row = document.createElement('tr');
                 container.append(row);
+                companyName = document.createElement('td');
+                row.append(companyName);
                 stock = document.createElement('td');
                 stock.textContent = body.rows[i].symbol;
                 row.append(stock);
@@ -77,11 +82,15 @@ fetch(url).then((response) => {
         message.textContent = "Something went wrong";
 })
 
+//companyName.textContent = getQuote('AAPL');
+
 let url2 = `/quote?symbol=AAPL`
+console.log(url2)
 fetch(url2).then((response) => {
     if (response.status === 200) {
         response.json().then(body => {
             console.log(body);
+            //companyName.textContent = body.companyName
         });
     } else {
         message.textContent = "not status 200";   
