--- a/app/public/index.html
+++ b/app/public/index.html
@@ -22,7 +22,8 @@
 </head>
 <body>
     <h1>Welcome User</h1>
-    <li><a href="/user/logout">logout</a></li>
+    <li><a href="/user/logout">Logout</a></li>
+    <li><a href="/search.html">Search</a></li>
 
     <table>
         <thead>
