--- a/app/public/search.html
+++ b/app/public/search.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        form {
+            padding:20px;
+        }
+    </style>
 </head>
 <body>
+    <h1>Welcome User</h1>
+    <li><a href="/index.html">Home Page</a></li>
     <form id="form">
         <label>Search for a stock: <input type="text" name="ticker"></label>
         <br /><br />
