--- a/app/public/search.html
+++ b/app/public/search.html
@@ -23,6 +23,8 @@
     <div id="sucessful-search">
         <div id="company-info">
             <h3 id="company-name"></h1>
+            <input id="quantity" type="number" placeholder="Quantity"></input>
+            <button id="buy">Buy</button> <button id="sell">Sell</button>
             <div id="price-container">
                 <h1 id="price"></h1>
                 <h3 id="change-price"></h3>
@@ -35,7 +37,10 @@
 
 
     <script>
-        let button = document.getElementById('search-button');
+        let buyBtn = document.getElementById('buy');
+        let sellBtn = document.getElementById('sell');
+        let quantity = document.getElementById('quantity')
+        let portfolioId = 1;
         const form = document.getElementById('form');
 
         form.addEventListener('submit', () => {
@@ -85,6 +90,54 @@
             }).catch((error) => {console.log(error)});
             event.preventDefault(); // why do we need this?
         });
+
+    buyBtn.addEventListener("click", () => {
+        let ticker = form.elements['ticker'].value;
+        let quantity = document.getElementById('quantity').value;
+        fetch(`/price?symbol=${ticker}`).then((response) => {
+            if (response.status === 200) {
+                response.json().then(body => {
+                    console.log(body.companyName, body.latestPrice)
+                    let latestPrice = body.latestPrice;
+                    console.log(latestPrice);
+                })
+            } else {
+                response.json().then((errorBody) => {
+                    document.getElementById("sucessful-search").style.display = "none";
+                    document.getElementById("error-message").style.display = "initial";
+                    let errorDiv = document.getElementById("error-message");
+                    errorDiv.textContent = errorBody.data;
+                    errorDiv.style.color = "red";
+                })
+            }
+        }).then(
+            fetch("/buy", {
+            method: 'POST',
+            body: JSON.stringify({symbol: ticker, action: 'buy', quantity: quantity, portfolioId: portfolioId}),
+            headers: {
+                "Content-Type": "application/json"
+                }
+            })
+        ).then(response => {
+            response.json().then(body => {
+                console.log("Second fetch:", body);
+            })
+        
+        })
+    })
+
+    sellBtn.addEventListener("click", () => {
+        let ticker = form.elements['ticker'].value;
+        let quantity = document.getElementById('quantity').value;
+        console.log("SELL");
+        fetch("/buy", {
+            method: 'POST',
+            body: JSON.stringify({symbol: ticker, action: 'sell', quantity: quantity, portfolioId: portfolioId}),
+            headers: {
+                "Content-Type": "application/json"
+            }
+        })
+    })
 
     </script>
 </body>
