--- a/app/public/index.html
+++ b/app/public/index.html
@@ -23,7 +23,7 @@
 <body>
     <h1>Welcome User</h1>
     <li><a href="/user/logout">Logout</a></li>
-    <li><a href="/search.html">Search</a></li>
+    <li><a href="/search">Search</a></li>
 
     <table>
         <thead>
