--- a/app/public/index.html
+++ b/app/public/index.html
@@ -27,7 +27,7 @@
 
     <table>
         <thead>
-            <tr><th>Company Name</th><th>Stock</th><th>Quantity</th><th>Total Value</th><th>Current Price</th><th>Daily Change</th><th>YTD Change</th><th>Currency</th></tr>
+            <tr><th>Company Name</th><th>Stock</th><th>Quantity</th><th>Total Value</th><th>GAV</th><th>Current Price</th><th>Daily Change</th><th>YTD Change</th><th>Yield</th></tr>
         </thead>
         <tbody id="portfolio"></tbody>
     </table>
@@ -59,6 +59,7 @@ fetch(url).then((response) => {
                 row.append(companyName);
                 stock = document.createElement('td');
                 stock.textContent = body.rows[i].symbol;
+                stock.id = body.rows[i].symbol + "ticker"
                 row.append(stock);
                 quantity = document.createElement('td');
                 quantity.textContent = body.rows[i].quantity;
@@ -66,22 +67,31 @@ fetch(url).then((response) => {
                 value = document.createElement('td');
                 value.textContent = dollarUS.format(body.rows[i].total);
                 row.append(value);
+                gav = document.createElement('td');
+                //Calculating average unit price of each stock
+                aveUnitPrice = body.rows[i].total / body.rows[i].quantity
+                gav.textContent = dollarUS.format(aveUnitPrice);
+                row.append(gav);
                 price = document.createElement('td');
                 row.append(price);
                 daily = document.createElement('td');
                 row.append(daily);
                 ytd = document.createElement('td');
                 row.append(ytd);
-                currency = document.createElement('td');
-                row.append(currency);
+                myYield = document.createElement('td');
+                row.append(myYield);
                 buyBtn = document.createElement("button");
                 buyBtn.textContent = "Buy";
-                buyBtn.id = body.rows[i].symbol;
+                buyBtn.id = body.rows[i].symbol + "buy";
                 row.append(buyBtn);
                 sellBtn = document.createElement("button");
                 sellBtn.textContent = "Sell";
-                sellBtn.id = body.rows[i].symbol;
+                sellBtn.id = body.rows[i].symbol+"sell";
                 row.append(sellBtn);
+                quantityInput = document.createElement("INPUT");
+                quantityInput.placeholder = "Quantity";
+                quantityInput.id = body.rows[i].symbol+"quantity";
+                row.append(quantityInput);
             }
         let url2 = `/quote?symbol=${tickerList}`
         console.log(url2)
@@ -95,16 +105,24 @@ fetch(url).then((response) => {
                     row = document.getElementById(key)
                     companyName = row.children[0]
                     companyName.textContent = body[key].quote.companyName;
-                    currentPrice = row.children[4]
+                    currentPrice = row.children[5]
                     currentPrice.textContent = dollarUS.format(body[key].quote.latestPrice);
-                    dailyChg = row.children[5]
+                    dailyChg = row.children[6]
                     dailyFormat = Number(body[key].quote.changePercent/100).toLocaleString(undefined,{style: 'percent', minimumFractionDigits:2});
                     dailyChg.textContent = dailyFormat;
-                    ytdChg = row.children[6]
+                    ytdChg = row.children[7]
                     ytdFormat = Number(body[key].quote.ytdChange/100).toLocaleString(undefined,{style: 'percent', minimumFractionDigits:2});
                     ytdChg.textContent = ytdFormat;
-                    currency = row.children[7]
-                    currency.textContent = body[key].quote.currency;
+                    gav = row.children[4].innerText.substring(1);
+                    // Average % increase/decrease for each stock --> current price/average unit price
+                    myYield = row.children[8]
+                    myYield.textContent = Number((body[key].quote.latestPrice / gav) - 1).toLocaleString(undefined,{style: 'percent', minimumFractionDigits:2});
+                    console.log(body[key].quote.latestPrice, gav);
+                    if (Number(myYield.textContent.slice(0, -1)) > 0) {
+                        myYield.style.color = "green";
+                    } else if (Number(myYield.textContent.slice(0, -1)) < 0) {
+                        myYield.style.color = "red";
+                }
                 }
         });
         } else {
@@ -120,25 +138,35 @@ fetch(url).then((response) => {
         message.textContent = "Something went wrong";
 })
 
-//companyName.textContent = getQuote('AAPL');
-
-/*
-let url2 = `/quote?symbol=AAPL`
-console.log(url2)
-fetch(url2).then((response) => {
-    if (response.status === 200) {
-        response.json().then(body => {
-            console.log(body);
-            companyName.textContent = body.companyName
-
-        });
-    } else {
-        message.textContent = "not status 200";   
-    }
-}).catch(error =>  {
-        message.textContent = "Something went wrong";
-})
-*/
+// .then(document.getElementById("AAPLbuy").addEventListener("click", () => {
+//     let ticker = getElementById("APPLticker").value;
+//     let quantity = getElementById("APPLquantity").value;
+//     let latestPrice = 0;
+//     let portfolioId = 1;
+//     fetch(`/price?symbol=${ticker}`).then((response) => {
+//         if (response.status === 200) {
+//             response.json().then(body => {
+//                 console.log(body.companyName, body.latestPrice)
+//                 latestPrice = body.latestPrice;
+//                 console.log(latestPrice);
+//         let urlBuy = `/placeOrder?symbol=${ticker}&orderType=BUY&quantity=${quantity}&portfolioId=${portfolioId}&price=${latestPrice}`
+//         console.log(urlBuy);
+//         return fetch(urlBuy)
+//     })
+//     .then(response => {
+//         response.json().then(body => {
+//             message.textContent = `Bought ${quantity} ${ticker}`;
+//             console.log(body);
+//         })
+//     })
+//         } else {
+//             response.json().then((errorBody) => {
+//                 console.log(errorBody)
+//             })
+//         }
+//     })
+// })
+// )
 </script>
 
 </body>
