--- a/app/public/index.html
+++ b/app/public/index.html
@@ -53,6 +53,7 @@ cashContainer.style.fontWeight = 'bold'; cashContainer.style.fontSize = "large";
 cash.style.fontWeight = 'bold'; cash.style.fontSize = "large";
 cashContainer.append(cash);
 
+
 fetch(`/cash?portfolioId=${portfolioId}`).then((response) => { 
     if (response.status === 200) {
         response.json().then(body => {
@@ -65,7 +66,7 @@ fetch(`/cash?portfolioId=${portfolioId}`).then((response) => {
     }
 })
 
-let url = `/portfolio`
+let url = `/portfolio?portfolioId=${portfolioId}`
 fetch(url).then((response) => {
     if (response.status === 200) {
         response.json().then(body => {
@@ -105,18 +106,18 @@ fetch(url).then((response) => {
                 stockYield = document.createElement('td');
                 row.append(stockYield);
 
-                buyBtn = document.createElement("button");
-                buyBtn.textContent = "Buy";
-                buyBtn.id = body.rows[i].symbol + "buy";
-                row.append(buyBtn);
-                sellBtn = document.createElement("button");
-                sellBtn.textContent = "Sell";
-                sellBtn.id = body.rows[i].symbol+"sell";
-                row.append(sellBtn);
-                quantityInput = document.createElement("INPUT");
-                quantityInput.placeholder = "Quantity";
-                quantityInput.id = body.rows[i].symbol+"quantity";
-                row.append(quantityInput);
+                // buyBtn = document.createElement("button");
+                // buyBtn.textContent = "Buy";
+                // buyBtn.id = body.rows[i].symbol + "buy";
+                // row.append(buyBtn);
+                // sellBtn = document.createElement("button");
+                // sellBtn.textContent = "Sell";
+                // sellBtn.id = body.rows[i].symbol+"sell";
+                // row.append(sellBtn);
+                // quantityInput = document.createElement("INPUT");
+                // quantityInput.placeholder = "Quantity";
+                // quantityInput.id = body.rows[i].symbol+"quantity";
+                // row.append(quantityInput);
             }
         row = document.createElement('tr'); row.style.fontWeight = 'bold'; row.style.fontSize = "large"; container.append(row);
         nameTotal = document.createElement("td"); nameTotal.textContent = "Total"; row.append(nameTotal);
