--- a/app/public/portfolioCreate.html
+++ b/app/public/portfolioCreate.html
@@ -26,7 +26,7 @@
 			</tr>
 		</table>
 
-		<button id="create">Create portfolio</button>
+		<button id="create">Create New Portfolio</button>
 
 		<div id="result">&nbsp;</div>
 
@@ -52,7 +52,6 @@
 					body: JSON.stringify({
 						name: nameInput.value,
 						cost: costInput.value,
-						user_id: costInput.value
 					})
 				}).then((response) => {
 					if (response.status === 200) {
