--- a/app/public/portfolioCreate.html
+++ b/app/public/portfolioCreate.html
@@ -51,7 +51,7 @@
 					},
 					body: JSON.stringify({
 						name: nameInput.value,
-						cost: costInput.value,
+						cash: costInput.value,
 					})
 				}).then((response) => {
 					if (response.status === 200) {
