fixed page reference

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -24,7 +24,7 @@
     <h1>Welcome User</h1>
     <li><a href="/user/logout">Logout</a></li>
     <li><a href="/search.html">Search</a></li>
-    <li><a href="/portfolioCreate.html">Create Portfolio</a></li>
+    <li><a href="/create/portfolio">Create Portfolio</a></li>
 
     <table>
         <thead>
