--- a/app/public/index_test.html
+++ b/app/public/index_test.html
@@ -23,6 +23,7 @@
 <body>
     <h1>Welcome User</h1>
     <li><a href="/user/logout">Logout</a></li>
+    <li><a href="/create/portfolio">Create Portfolio</a></li>
     <li><a href="/search">Search</a></li>
 
     <table>
