--- a/app/public/portfolioCreate.html
+++ b/app/public/portfolioCreate.html
@@ -29,7 +29,7 @@
 		<button id="create">Create New Portfolio</button>
 
 		<div id="result">&nbsp;</div>
-
+		<p><a href="/index.html">Home Page</a></p>
 		<p>Already have an account? Log in <a href="/user/login">here</a>.</p>
 
 		<script>
